--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "6.3.0",
     "@fortawesome/vue-fontawesome": "3.0.3",
     "pinia": "2.0.30",
+    "pinia-plugin-persistedstate": "3.2.0",
     "sass": "1.58.0",
     "vue": "3.2.45"
   },
